# dhund-ai

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
image-text-embedding-service/: data_importer.py  python.Dockerfile  requirements.txt  train.py
src/: lib.rs  utils.rs
src/embedd/: clip_embedding_generator.rs  config.rs  image_processor.rs  mod.rs  structures.rs
vespa/: vespa.Dockerfile
